# llmchess

./: .gitignore  .llmchess_history  AGENTS.md  CURRENT_STATE.md  README.md  main.py  opencode.json  pyproject.toml
.opencode/agent/: chess-player.md
.opencode/command/: chess.md
.opencode/tools/: chess.ts
src/llmchess/: __init__.py  cli.py  game.py  match.py  models.py  render.py  store.py
src/llmchess/pieces/: __init__.py  bishop.txt  king.txt  knight.txt  pawn.txt  queen.txt  rook.txt
tests/: test_cli.py  test_game.py  test_main.py  test_match.py  test_store.py
