[project]
name = "llmchess"
version = "0.1.0"
description = "A chess harness for playing against an OpenCode LLM agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-chess>=1.999",
    "rich>=14.3.3",
]

[project.scripts]
llmchess = "llmchess.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "ty>=0.0.19",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
